# stm32l0x2-ob-reset

./: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs  ob.rs  pac.rs
